--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,5 @@
-== README
+basechurch
+==========
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
-
-Things you may want to cover:
-
-* Ruby version
-
-* System dependencies
-
-* Configuration
-
-* Database creation
-
-* Database initialization
-
-* How to run the test suite
-
-* Services (job queues, cache servers, search engines, etc.)
-
-* Deployment instructions
-
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+[![Build Status](https://travis-ci.org/basechurch/basechurch-api.svg?branch=master)](https://travis-ci.org/basechurch/basechurch-api)
+[![Code Climate](https://codeclimate.com/github/basechurch/basechurch-api/badges/gpa.svg)](https://codeclimate.com/github/basechurch/basechurch-api)
